src/main/java/com/devdaniel/icss/Service/icss/parser/ICSSParser.java
// Generated from C:/Users/Danie/OneDrive/Documenten/ASD/APP/BPprog/startcode/src/main/antlr4/nl/han/ica/icss/parser\ICSS.g4 by ANTLR 4.7
package com.devdaniel.icss.Service.icss.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ICSSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DIMENSIONPROPERTY=1, COLOR_PROPERTY=2, PIXEL_LITERAL=3, BOOLEAN_LITERAL=4, 
		TEXT=5, CONSTANTNAME=6, PERCENTAGE_LITERAL=7, COLOR_LITERAL=8, HASH=9, 
		CURLYOPEN=10, CURLYCLOSE=11, SQUAREOPEN=12, SQUARECLOSE=13, SEMICOLON=14, 
		DOT=15, COLON=16, EQUALS=17, SUM=18, DASH=19, PIPE=20, BIGGERTHAN=21, 
		SMALLERTHAN=22, DOUBLEEQUALS=23, DOUBLEPIPE=24, DOUBLEAMPERSAND=25, TERNARYOPERATOR=26, 
		WS=27;
	public static final int
		RULE_stylesheet = 0, RULE_stylerule = 1, RULE_constant = 2, RULE_selector = 3, 
		RULE_classselector = 4, RULE_tagselector = 5, RULE_idselector = 6, RULE_declaration = 7, 
		RULE_colorline = 8, RULE_dimensionline = 9, RULE_colorternarydeclaration = 10, 
		RULE_dimensionternarydeclaration = 11, RULE_operation = 12, RULE_extraoperation = 13, 
		RULE_statement = 14, RULE_booleanexpression = 15, RULE_extraexpression = 16, 
		RULE_comparison = 17, RULE_type = 18, RULE_comparable = 19, RULE_dimensionvalue = 20, 
		RULE_colorvalue = 21, RULE_calculatable = 22, RULE_operator = 23, RULE_compoperator = 24;
	public static final String[] ruleNames = {
		"stylesheet", "stylerule", "constant", "selector", "classselector", "tagselector", 
		"idselector", "declaration", "colorline", "dimensionline", "colorternarydeclaration", 
		"dimensionternarydeclaration", "operation", "extraoperation", "statement", 
		"booleanexpression", "extraexpression", "comparison", "type", "comparable", 
		"dimensionvalue", "colorvalue", "calculatable", "operator", "compoperator"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "'=='", 
		"'||'", "'&&'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DIMENSIONPROPERTY", "COLOR_PROPERTY", "PIXEL_LITERAL", "BOOLEAN_LITERAL", 
		"TEXT", "CONSTANTNAME", "PERCENTAGE_LITERAL", "COLOR_LITERAL", "HASH", 
		"CURLYOPEN", "CURLYCLOSE", "SQUAREOPEN", "SQUARECLOSE", "SEMICOLON", "DOT", 
		"COLON", "EQUALS", "SUM", "DASH", "PIPE", "BIGGERTHAN", "SMALLERTHAN", 
		"DOUBLEEQUALS", "DOUBLEPIPE", "DOUBLEAMPERSAND", "TERNARYOPERATOR", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ICSS.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ICSSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StylesheetContext extends ParserRuleContext {
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public List<StyleruleContext> stylerule() {
			return getRuleContexts(StyleruleContext.class);
		}
		public StyleruleContext stylerule(int i) {
			return getRuleContext(StyleruleContext.class,i);
		}
		public StylesheetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stylesheet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterStylesheet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitStylesheet(this);
		}
	}

	public final StylesheetContext stylesheet() throws RecognitionException {
		StylesheetContext _localctx = new StylesheetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stylesheet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT) | (1L << CONSTANTNAME) | (1L << HASH) | (1L << DOT))) != 0)) {
				{
				setState(52);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CONSTANTNAME:
					{
					setState(50);
					constant();
					}
					break;
				case TEXT:
				case HASH:
				case DOT:
					{
					setState(51);
					stylerule();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StyleruleContext extends ParserRuleContext {
		public SelectorContext selector() {
			return getRuleContext(SelectorContext.class,0);
		}
		public TerminalNode CURLYOPEN() { return getToken(ICSSParser.CURLYOPEN, 0); }
		public TerminalNode CURLYCLOSE() { return getToken(ICSSParser.CURLYCLOSE, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public StyleruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stylerule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterStylerule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitStylerule(this);
		}
	}

	public final StyleruleContext stylerule() throws RecognitionException {
		StyleruleContext _localctx = new StyleruleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stylerule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			selector();
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SQUAREOPEN) {
				{
				setState(58);
				statement();
				}
			}

			setState(61);
			match(CURLYOPEN);
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				declaration();
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIMENSIONPROPERTY || _la==COLOR_PROPERTY );
			setState(67);
			match(CURLYCLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode CONSTANTNAME() { return getToken(ICSSParser.CONSTANTNAME, 0); }
		public TerminalNode COLON() { return getToken(ICSSParser.COLON, 0); }
		public TerminalNode EQUALS() { return getToken(ICSSParser.EQUALS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ICSSParser.SEMICOLON, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(CONSTANTNAME);
			setState(70);
			match(COLON);
			setState(71);
			match(EQUALS);
			setState(72);
			type();
			setState(73);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectorContext extends ParserRuleContext {
		public ClassselectorContext classselector() {
			return getRuleContext(ClassselectorContext.class,0);
		}
		public TagselectorContext tagselector() {
			return getRuleContext(TagselectorContext.class,0);
		}
		public IdselectorContext idselector() {
			return getRuleContext(IdselectorContext.class,0);
		}
		public SelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterSelector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitSelector(this);
		}
	}

	public final SelectorContext selector() throws RecognitionException {
		SelectorContext _localctx = new SelectorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOT:
				{
				setState(75);
				classselector();
				}
				break;
			case TEXT:
				{
				setState(76);
				tagselector();
				}
				break;
			case HASH:
				{
				setState(77);
				idselector();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassselectorContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(ICSSParser.DOT, 0); }
		public TerminalNode TEXT() { return getToken(ICSSParser.TEXT, 0); }
		public ClassselectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classselector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterClassselector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitClassselector(this);
		}
	}

	public final ClassselectorContext classselector() throws RecognitionException {
		ClassselectorContext _localctx = new ClassselectorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classselector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(DOT);
			setState(81);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagselectorContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ICSSParser.TEXT, 0); }
		public TagselectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagselector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterTagselector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitTagselector(this);
		}
	}

	public final TagselectorContext tagselector() throws RecognitionException {
		TagselectorContext _localctx = new TagselectorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tagselector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdselectorContext extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(ICSSParser.HASH, 0); }
		public TerminalNode TEXT() { return getToken(ICSSParser.TEXT, 0); }
		public IdselectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idselector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterIdselector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitIdselector(this);
		}
	}

	public final IdselectorContext idselector() throws RecognitionException {
		IdselectorContext _localctx = new IdselectorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_idselector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(HASH);
			setState(86);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(ICSSParser.SEMICOLON, 0); }
		public ColorlineContext colorline() {
			return getRuleContext(ColorlineContext.class,0);
		}
		public DimensionlineContext dimensionline() {
			return getRuleContext(DimensionlineContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COLOR_PROPERTY:
				{
				setState(88);
				colorline();
				}
				break;
			case DIMENSIONPROPERTY:
				{
				setState(89);
				dimensionline();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(92);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColorlineContext extends ParserRuleContext {
		public TerminalNode COLOR_PROPERTY() { return getToken(ICSSParser.COLOR_PROPERTY, 0); }
		public TerminalNode COLON() { return getToken(ICSSParser.COLON, 0); }
		public ColorvalueContext colorvalue() {
			return getRuleContext(ColorvalueContext.class,0);
		}
		public ColorternarydeclarationContext colorternarydeclaration() {
			return getRuleContext(ColorternarydeclarationContext.class,0);
		}
		public ColorlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_colorline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterColorline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitColorline(this);
		}
	}

	public final ColorlineContext colorline() throws RecognitionException {
		ColorlineContext _localctx = new ColorlineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_colorline);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(COLOR_PROPERTY);
			setState(95);
			match(COLON);
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(96);
				colorvalue();
				}
				break;
			case 2:
				{
				setState(97);
				colorternarydeclaration();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DimensionlineContext extends ParserRuleContext {
		public TerminalNode DIMENSIONPROPERTY() { return getToken(ICSSParser.DIMENSIONPROPERTY, 0); }
		public TerminalNode COLON() { return getToken(ICSSParser.COLON, 0); }
		public DimensionvalueContext dimensionvalue() {
			return getRuleContext(DimensionvalueContext.class,0);
		}
		public DimensionternarydeclarationContext dimensionternarydeclaration() {
			return getRuleContext(DimensionternarydeclarationContext.class,0);
		}
		public DimensionlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimensionline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterDimensionline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitDimensionline(this);
		}
	}

	public final DimensionlineContext dimensionline() throws RecognitionException {
		DimensionlineContext _localctx = new DimensionlineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_dimensionline);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(DIMENSIONPROPERTY);
			setState(101);
			match(COLON);
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(102);
				dimensionvalue();
				}
				break;
			case 2:
				{
				setState(103);
				dimensionternarydeclaration();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColorternarydeclarationContext extends ParserRuleContext {
		public BooleanexpressionContext booleanexpression() {
			return getRuleContext(BooleanexpressionContext.class,0);
		}
		public TerminalNode TERNARYOPERATOR() { return getToken(ICSSParser.TERNARYOPERATOR, 0); }
		public List<ColorvalueContext> colorvalue() {
			return getRuleContexts(ColorvalueContext.class);
		}
		public ColorvalueContext colorvalue(int i) {
			return getRuleContext(ColorvalueContext.class,i);
		}
		public TerminalNode COLON() { return getToken(ICSSParser.COLON, 0); }
		public List<ExtraexpressionContext> extraexpression() {
			return getRuleContexts(ExtraexpressionContext.class);
		}
		public ExtraexpressionContext extraexpression(int i) {
			return getRuleContext(ExtraexpressionContext.class,i);
		}
		public ColorternarydeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_colorternarydeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterColorternarydeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitColorternarydeclaration(this);
		}
	}

	public final ColorternarydeclarationContext colorternarydeclaration() throws RecognitionException {
		ColorternarydeclarationContext _localctx = new ColorternarydeclarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_colorternarydeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			booleanexpression();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOUBLEPIPE || _la==DOUBLEAMPERSAND) {
				{
				{
				setState(107);
				extraexpression();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(TERNARYOPERATOR);
			setState(114);
			colorvalue();
			setState(115);
			match(COLON);
			setState(116);
			colorvalue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DimensionternarydeclarationContext extends ParserRuleContext {
		public BooleanexpressionContext booleanexpression() {
			return getRuleContext(BooleanexpressionContext.class,0);
		}
		public TerminalNode TERNARYOPERATOR() { return getToken(ICSSParser.TERNARYOPERATOR, 0); }
		public List<DimensionvalueContext> dimensionvalue() {
			return getRuleContexts(DimensionvalueContext.class);
		}
		public DimensionvalueContext dimensionvalue(int i) {
			return getRuleContext(DimensionvalueContext.class,i);
		}
		public TerminalNode COLON() { return getToken(ICSSParser.COLON, 0); }
		public List<ExtraexpressionContext> extraexpression() {
			return getRuleContexts(ExtraexpressionContext.class);
		}
		public ExtraexpressionContext extraexpression(int i) {
			return getRuleContext(ExtraexpressionContext.class,i);
		}
		public DimensionternarydeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimensionternarydeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterDimensionternarydeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitDimensionternarydeclaration(this);
		}
	}

	public final DimensionternarydeclarationContext dimensionternarydeclaration() throws RecognitionException {
		DimensionternarydeclarationContext _localctx = new DimensionternarydeclarationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_dimensionternarydeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			booleanexpression();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOUBLEPIPE || _la==DOUBLEAMPERSAND) {
				{
				{
				setState(119);
				extraexpression();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			match(TERNARYOPERATOR);
			setState(126);
			dimensionvalue();
			setState(127);
			match(COLON);
			setState(128);
			dimensionvalue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public List<CalculatableContext> calculatable() {
			return getRuleContexts(CalculatableContext.class);
		}
		public CalculatableContext calculatable(int i) {
			return getRuleContext(CalculatableContext.class,i);
		}
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public List<ExtraoperationContext> extraoperation() {
			return getRuleContexts(ExtraoperationContext.class);
		}
		public ExtraoperationContext extraoperation(int i) {
			return getRuleContext(ExtraoperationContext.class,i);
		}
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitOperation(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_operation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			calculatable();
			setState(131);
			operator();
			setState(132);
			calculatable();
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUM || _la==DASH) {
				{
				{
				setState(133);
				extraoperation();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtraoperationContext extends ParserRuleContext {
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public CalculatableContext calculatable() {
			return getRuleContext(CalculatableContext.class,0);
		}
		public ExtraoperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extraoperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterExtraoperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitExtraoperation(this);
		}
	}

	public final ExtraoperationContext extraoperation() throws RecognitionException {
		ExtraoperationContext _localctx = new ExtraoperationContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_extraoperation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			operator();
			setState(140);
			calculatable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode SQUAREOPEN() { return getToken(ICSSParser.SQUAREOPEN, 0); }
		public BooleanexpressionContext booleanexpression() {
			return getRuleContext(BooleanexpressionContext.class,0);
		}
		public TerminalNode SQUARECLOSE() { return getToken(ICSSParser.SQUARECLOSE, 0); }
		public List<ExtraexpressionContext> extraexpression() {
			return getRuleContexts(ExtraexpressionContext.class);
		}
		public ExtraexpressionContext extraexpression(int i) {
			return getRuleContext(ExtraexpressionContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ICSSListener ) ((ICSSListener)listener).exitStatement(this);
		}
	}
